Fixed screen size
RHS disappearing off screen.

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ html, body, #map_canvas {
         }
 
 .page-content, .mdl-layout__content{
-  width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
